# PeiDocker

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  ComposeGenerator.py  GEMINI.md  GITHUB_ACTIONS_PYPI.md  LICENSE  MANIFEST.in  PYPI_UPLOAD.md  README.md  RELEASE_NOTES.md  build-stage-2.bat  build-stage-2.sh  compose-config.yml  configure-in-build.bat  create-in-build.bat  create-in-build.sh  docker-compose.yml  main.Dockerfile  mkdocs.yml  octest.yml  pei-docker.py  peidocker_gui.py  pixi.toml  pyproject.toml  screen2_final_test.py  setup-envs.sh  setup-proxy.sh  simple_test.py  snapshot_report.html  stage-1.Dockerfile  stage_1.Dockerfile  stage_2.Dockerfile  stage_base.Dockerfile  stage_runtime.Dockerfile  start-interactive-shell.bat  test-anything.py  test-entry.sh  (+29 more)
.claude/: settings.local.json
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml
.promptx/: .xml-upgrade-backup-done  pouch.json
.promptx/resource/: project.registry.json
context/: README.md
context-summary/: environment-variables-guide.md
context/design/: README.md  arch-webgui-data-models.md  arch-webgui.md  gui-to-core-data-mapping.md  terminology.md
context/hints/: about-numpy-restructuredtext-docstring-style.md  about-test-case-spec.md  about-textual-gui-tools.md  about-useful-examples-in-textual-official.md  checked-gui-widget-mount-error.md  howto-automatic-testing-puppeteer-python.md  howto-automatic-testing-puppeteer.md  howto-bidirectional-data-binding-nicegui.md  howto-create-gui-functionality-test-cases.md  howto-develop-spa-web-gui.md  howto-file-browser-textual.md  howto-implement-realtime-logs-in-textual.md  howto-integrate-pixi-with-pypi.md  howto-nicegui-directory-selection.md  howto-nicegui-zip-directory-download.md  howto-set-pixi-location.md  howto-test-nicegui-with-playwright.md  howto-test-static-websites-with-python-playwright.md  howto-test-textual-app-simulate-user.md  howto-test-textual-gui-applications-headless.md  howto-test-textual-gui-applications.md  howto-test-textual-gui-with-screenshots.md  howto-to-avoid-cluttered-graphics.md  howto-track-unsaved-changes-nicegui.md  howto-use-emoji-in-latex.md  howto-use-pgf-umlcd.md  howto-use-sshpass-win32.md  howto-use-textual.md  howto-use-uml-for-gui-design-with-plantuml.md  howto-write-web-gui-design-docs.md  howto-yaml-parsing-shell.md  install-pixi-custom-location.md  intro-pytest-textual-snapshot.md  yaml-parsing-shell.md
context/instructions/: README.md  apply-graphics.md  caveats.md  check-code.md  check-online.md  debug-code.md  doc-architect.md  document-python-code.md  generalize-role-memory.md  gui-test-screenshots.md  headless-testing.md  linux-env.md  list-files.md  mac-env.md  make-architect-doc.md  make-hint.md  make-memory.md  make-project-summary.md  make-refactor-plan.md  makehint.md  mem-as-doc-skill.md  mem-as-engineering-skill.md  mem-as-project-specific.md  mem-as-tool-skill.md  nicegui-interactive-test.md  review-code-by-mem.md  review-code-by-search.md  revise-doc.md  save-command.md  strongly-typed.md  validate-types.md  win32-env.md  write-code.md
context/logs/: IMPLEMENTATION-LOG-SC-4-SSH-CONFIG-2025-07-29.md  README.md  SUMMARY-SC-3-STATUS-2025-07-28.md  testlog-2025-07-24-SC-0-BUG-FIXES.md  testlog-2025-07-24-SUMMARY.md  testlog-2025-07-24-TC-STATE-001.md  testlog-2025-07-24-TC-VAL-001.md  testlog-2025-07-24-TC-WIZARD-001-focused.md  testlog-2025-07-24-TC-WIZARD-001-improved.md  testlog-2025-07-24-TC-WIZARD-001.md  testlog-2025-07-24-TC-WIZARD-002-focused.md  testlog-2025-07-24-TC-WIZARD-002.md  testlog-2025-07-24-UPDATED-SUMMARY.md  testlog-2025-07-28-SC-3-WIZARD-INTEGRATION-ISSUES.md  testlog-20250724.md
context/plans/: README.md  plan-deprecate-gui-module.md
context/refcode/: README.md  textual-example-list.md
context/roles/: README.md  nicegui-developer-activate.md  nicegui-developer-call.md
context/summaries/: README.md  bug-bash-array-expansion-errors.md  bug-boolean-case-mismatch.md  bug-chown-invalid-group.md  bug-gid-conflict-user-creation-failure.md  bug-unbound-ssh-variables.md  custom-script-parameters-compatibility-fix.md  custom-script-params-implementation.md  how-custom-scripts-work.md  list-gui-data-models.md  list-gui-pydantic-models.md  lsfiles-src-2025-07-23-143000.md  lsfiles-src-2025-07-29_00-54-53.md  lsfiles-src-20250731-045506.md  lsfiles-src-depth3-20250731-045639.md  peidocker-usage-guide.md  summary-PeiDocker.md  user-project-structure.md
context/summary/: peidocker-analysis.md
context/tasks/: README.md  migration-guide-data-model.md  refactor-summary.md  ssh-key-path-bug.md  ssh-key-specifications.md  task-anything.md  task-create-automatic-test-pipeline.md  task-create-test-case.md  task-custom-entry-point.md  task-fix-gui-3-summary.md  (+13 more)
contribs/: readme.md
docs/: about.md  advanced_examples.md  build-internals.md  cli_reference.md  examples.md  index.md  webgui_guide.md
examples/: README.md
gui/: docker-compose-generator.py
initscripts/: apt-proxy.conf  cleanup.sh  entrypoint.sh  install-additional-apps.sh  install-essentials.sh  setup-env.sh  setup-ssh.sh  sources-tsinghua.list
pei_docker/: config_processor.py  generate_example_config.py  pei-docker.py  pei.py  pei_utils.py  user_config.py
run/: build-stage-1.bat  build-stage-1.sh  configure-in-build.sh  create-in-build.bat  create-in-build.sh  up-stage-1.bat  up-stage-1.sh
scripts/: README.md  build-config.bash  manage-apt-cache.py  publish_to_pypi.bat  publish_to_pypi.sh
templates/: base-image.yml  config-template-full.yml
tests/: README-ssh-abspath.md  TEST-SUMMARY-custom-script-params.md  TEST-SUMMARY-ssh-abspath.md  __init__.py  test_basic_examples_docs.py  test_custom_script_args.py  test_entrypoint_wrapper_generation.py  test_env_var_passthrough.py  test_mount_path_resolution.py  test_on_build_path_validation.py  test_project_setup_screen.py  test_stage2_system_migration.py  test_tc_nav_001_summary.py  test_tc_wizard_001_summary_verification.py  test_wizard_complete_flow_tc_wizard_001.py  test_wizard_navigation_basic.py  test_wizard_navigation_tc_nav_001.py
(+967 files in other folders)
